[workspace]
members = ['contracts/*']
resolver = "2"

[workspace.package]
authors = ["Aura Network"]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/aura-nw/punkga-contracts"
rust-version = "1.67"

[workspace.package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.13.0
"""

[workspace.dependencies]
punkga-leveling = { path = "./contracts/punkga-leveling" }
cosmwasm-schema = "1.1.8"
cosmwasm-std = "1.1.8"
cosmwasm-storage = "1.1.8"
cw-multi-test = "0.17.0"
cw-storage-plus = "1.0.0"
cw-utils = "1.0.0"
cw2 = "1.0.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
cw2981-royalties = {version = "0.18.0", features = ["library"]}
cw-ownable = "0.5.1"
thiserror = { version = "1.0.37" }
schemars = "0.8.11"
