[package]
name = "punkga-reward-nft"
version = "0.1.0"
authors = ["Aura Network"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
cosmwasm-schema = { workpace = true }
cosmwasm-std = { workpace = true }
cw-storage-plus = { workpace = true }
cw2 = { workpace = true }
schemars = { workpace = true }
serde = { workpace = true }
thiserror = { workpace = true }
cw721 = { workpace = true }
cw721-base = { workpace = true, features = ["library"] }
cw-ownable = { workpace = true }

[dev-dependencies]
cw-multi-test = { workpace = true }
